--- a/main_page/templates/main_page/navbar.html
+++ b/main_page/templates/main_page/navbar.html
@@ -1,3 +1,10 @@
+<!--
+    REFERENCES
+    Title: Bootstrap 4 Navbar Center Right Left
+    Authors: Skelly
+    Date: March 1, 2017
+    URL: https://www.codeply.com/go/qhaBrcWp3v
+-->
 {% load socialaccount %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'main_page/navbar.css' %}" />
@@ -16,7 +23,6 @@
             </li>
         </ul>
     </div>
-    <!-- Source for Right-Align https://www.codeply.com/go/qhaBrcWp3v -->
     <div class="collapse navbar-collapse text-right">
         <ul class="navbar-nav ml-auto flex-nowrap">
             <li class="nav-item">
