--- a/main_page/templates/main_page/resource_submit.html
+++ b/main_page/templates/main_page/resource_submit.html
@@ -1,4 +1,17 @@
-﻿{% load socialaccount %}
+﻿<!--
+    REFERENCES
+    Title: Bootstrap
+    Authors: The Bootstrap Authors
+    Date: 2011-2018
+    URL: https://getbootstrap.com
+    Code Version: 4.0.0
+    Software License: MIT
+
+    Title: Vertical Form Layout
+    Authors:  Tutorial Republic
+    URL: https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=vertical-form-layout
+-->
+{% load socialaccount %}
 {% load static %}
 <!DOCTYPE html>
 {% if not user.is_authenticated %}
