--- a/email_sys/templates/email_sys/base.html
+++ b/email_sys/templates/email_sys/base.html
@@ -1,3 +1,12 @@
+﻿<!--
+    REFERENCES
+    Title: Bootstrap
+    Authors: The Bootstrap Authors
+    Date: 2011-2018
+    URL: https://getbootstrap.com
+    Code Version: 4.0.0
+    Software License: MIT
+-->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
