--- a/email_sys/templates/email_sys/email_sent.html
+++ b/email_sys/templates/email_sys/email_sent.html
@@ -1,4 +1,19 @@
+﻿<!--
+    REFERENCES
+    Title: Bootstrap
+    Authors: The Bootstrap Authors
+    Date: 2011-2018
+    URL: https://getbootstrap.com
+    Code Version: 4.0.0
+    Software License: MIT
 
+    Title: JQuery
+    Authors: JS Foundation and other contributers
+    Date: 2020
+    URL: https://code.jquery.com/
+    Code Version: 3.4.1
+    Software License: MIT
+-->
 {% load static %}
 
 <!DOCTYPE html>
@@ -17,15 +32,20 @@
     {% block content %}{% endblock %}
 
     <style>
-        h1    {color:black;}
-        .title_div   {margin: 100px;}
-        body{
-        background: white url("images/thumbs_up.png") no-repeat;
-    }
+        h1 {
+            color: black;
+        }
 
+        .title_div {
+            margin: 100px;
+        }
+
+        body {
+            background: white url("images/thumbs_up.png") no-repeat;
+        }
     </style>
 
-    <div class ="title_div">
+    <div class="title_div">
         <div class="d-flex justify-content-center">
             <h1 class="display-2">Thanks for using Civic Connect!</h1>
 
@@ -34,9 +54,9 @@
     </div>
 
     {% if text_body %}
-        <meta http-equiv="refresh" content="0; mailto:{{email_text}}?subject={{subject}}&body={{text_body}}" />
+    <meta http-equiv="refresh" content="0; mailto:{{email_text}}?subject={{subject}}&body={{text_body}}" />
     {% else %}
-        <meta http-equiv="refresh" content="0; mailto:{{email_text}}" />
+    <meta http-equiv="refresh" content="0; mailto:{{email_text}}" />
     {% endif %}
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
