--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -1,4 +1,22 @@
-﻿{% load account %}
+﻿<!--
+    REFERENCES
+    Title: Bootstrap
+    Authors: The Bootstrap Authors
+    Date: 2011-2018
+    URL: https://getbootstrap.com
+    Code Version: 4.0.0
+    Software License: MIT
+
+    Title: Vertical Form Layout
+    Authors:  Tutorial Republic
+    URL: https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=vertical-form-layout
+
+    Title: Make a linke use POST instead of GET (Stack Overflow)
+    Authors: Ajedi32
+    Date: August 30, 2016
+    URL: https://stackoverflow.com/questions/3915917/make-a-link-use-post-instead-of-get
+-->
+{% load account %}
 {% load static %}
 {% load socialaccount %}
 <!DOCTYPE html>
@@ -42,7 +60,6 @@
         <div class="jumbotron style = border-radius:20px">
             {% if needs_address %}
             <h3>Find my Government Officials</h3>
-            <!-- Resource for form https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=vertical-form-layout -->
             <form action="{% url 'main_page:home_page' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
