--- a/main_page/templates/main_page/resource_thanks.html
+++ b/main_page/templates/main_page/resource_thanks.html
@@ -1,4 +1,13 @@
-﻿{% load static %}
+﻿<!--
+    REFERENCES
+    Title: Bootstrap
+    Authors: The Bootstrap Authors
+    Date: 2011-2018
+    URL: https://getbootstrap.com
+    Code Version: 4.0.0
+    Software License: MIT
+-->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
