--- a/email_sys/templates/email_sys/email_sent.html
+++ b/email_sys/templates/email_sys/email_sent.html
@@ -1,4 +1,18 @@
+<!--*  REFERENCES
+*  Title: Flex
+*  Author: Bootstrap Developers
+*  Date: 11/3/2020
+*  Code version: Bootstrap 4.0
+*  URL: https://getbootstrap.com/docs/4.4/utilities/flex/
+*  Software License: MIT
 
+*  Title: Typography
+*  Author: Bootstrap Developers
+*  Date: 11/10/2020
+*  Code version: Bootstrap 4.0
+*  URL: https://getbootstrap.com/docs/4.0/content/typography/
+*  Software License: MIT
+-->
 {% load static %}
 
 <!DOCTYPE html>
