--- a/email_sys/templates/email_sys/email_view.html
+++ b/email_sys/templates/email_sys/email_view.html
@@ -1,4 +1,26 @@
-﻿
+﻿<!--*  REFERENCES
+*  Title: Forms
+*  Author: Bootstrap Developers
+*  Date: 11/3/2020
+*  Code version: Bootstrap 4.0
+*  URL: https://getbootstrap.com/docs/4.0/components/forms/
+*  Software License: MIT
+*
+*  Title: Buttons
+*  Author: Bootstrap Developers
+*  Date: 11/3/2020
+*  Code version: Bootstrap 4.0
+*  URL: https://getbootstrap.com/docs/4.0/components/buttons/
+*  Software License: MIT
+
+*  Title: Flex
+*  Author: Bootstrap Developers
+*  Date: 11/3/2020
+*  Code version: Bootstrap 4.0
+*  URL: https://getbootstrap.com/docs/4.4/utilities/flex/
+*  Software License: MIT
+-->
+
 {% load static %}
 
 <!DOCTYPE html>
