--- a/email_sys/templates/email_sys/navbar.html
+++ b/email_sys/templates/email_sys/navbar.html
@@ -1,3 +1,19 @@
+<!--*  REFERENCES
+*  Title: Navbar
+*  Author: Bootstrap Developers
+*  Date: 9/19/2020
+*  Code version: Bootstrap 4.0
+*  URL: https://getbootstrap.com/docs/4.0/components/navbar/
+*  Software License: MIT
+
+*  Title: Bootstrap 4 Navbar Center Right Left
+*  Author: Unknown
+*  Date: 9/19/2020
+*  Code version: Bootstrap 4.0
+*  URL: https://www.codeply.com/go/qhaBrcWp3v
+*  Software License: MIT
+-->
+
 {% load static %}
     <link rel="stylesheet" href="{% static 'main_page/navbar.css' %}" />
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
