--- a/email_sys/templates/email_sys/template_customize.html
+++ b/email_sys/templates/email_sys/template_customize.html
@@ -1,4 +1,13 @@
-﻿{% load static %}
+﻿<!--*  REFERENCES
+*  Title: Flex
+*  Author: codeLAB
+*  Date: 11/23/2020
+*  Code version: Bootstrap 4.0
+*  URL: https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=vertical-form-layout
+*  Software License: MIT
+-->
+
+{% load static %}
 {% load dictionary_filters %}
 <!DOCTYPE html>
 <html lang="en">
