--- a/email_sys/templates/email_sys/template_email.html
+++ b/email_sys/templates/email_sys/template_email.html
@@ -1,4 +1,13 @@
-﻿{% load static %}
+﻿<!--*  REFERENCES
+*  Title: Cards
+*  Author: Bootstrap Developers
+*  Date: 10/20/2020
+*  Code version: Bootstrap 4.0
+*  URL: https://getbootstrap.com/docs/4.0/components/card/
+*  Software License: MIT
+-->
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
