--- a/main_page/templates/main_page/footer.html
+++ b/main_page/templates/main_page/footer.html
@@ -1,10 +1,18 @@
-<footer class="footer">
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© <b>2020 Copyright:</b>
-      <a>Team 2-27 Civic-Connect</a>
-    </div>
-    <!-- Copyright -->
+<style>
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(17, 123, 223, 0.829);
+    color: white;
+    text-align: center;
+  }
+  </style>
   
-</footer>
-  <!-- Footer -->
+  <div class="footer">
+    <p><b>© 2020 Copyright:</b> 2-27 Civic-Connect</p>
+  </div>
+
+  
+
