--- a/main_page/templates/main_page/footer.html
+++ b/main_page/templates/main_page/footer.html
@@ -1,3 +1,12 @@
+<!--*  REFERENCES
+*  Title: How TO - Fixed Footer
+*  Author: w3schools
+*  Date: 11/20/2020
+*  Code version: CSS
+*  URL: https://www.w3schools.com/howto/howto_css_fixed_footer.asp
+*  Software License: MIT
+-->
+
 <style>
   .footer {
     position: fixed;
