add footer to home page

--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -11,7 +11,7 @@
     Authors:  Tutorial Republic
     URL: https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=vertical-form-layout
 
-    Title: Make a linke use POST instead of GET (Stack Overflow)
+    Title: Make a link using POST instead of GET (Stack Overflow)
     Authors: Ajedi32
     Date: August 30, 2016
     URL: https://stackoverflow.com/questions/3915917/make-a-link-use-post-instead-of-get
@@ -130,6 +130,7 @@
         </div>
     </div>
 </body>
+{% include 'main_page/footer.html' %}
 </html>
 <script>
     var ChangeAddress = function () {
